tests/purs/failing/DuplicateModule.purs
-- @shouldFailWith DuplicateModule
module M1 where
